--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </h1>
       <h3 id="shloka-meaning">
         For the protection of the good, <br />for the destruction of the evil
-        <br />and for the establishment of dharma (righteousness),<br />I (the
-        Lord) am born from age to age.
+        <br />and for the establishment of dharma,<br />I am born from age to
+        age.
       </h3>
     </div>
     <canvas id="canvas1"></canvas>
