--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
   <body>
     <div id="texts">
       <h1 id="shloka">
-        परित्राणाय साधूनां विनाशाय च दुष्कृताम्। <br />
-        धर्मसंस्थापनार्थाय संभवामि युगे युगे ।।4.8।।
+        विश्वम् दर्पण दॄश्यमान नगरी तुल्य्म् <br />
+        निजान्तर्गतम्
       </h1>
-      <h3 id="shloka-meaning">
-        For the protection of the good, <br />for the destruction of the evil
-        <br />and for the establishment of dharma,<br />I am born from age to
-        age.
-      </h3>
     </div>
     <canvas id="canvas1"></canvas>
     <script src="script.js"></script>
