--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body>
     <div id="texts">
       <h1 id="shloka">
-        विश्वम् दर्पण दॄश्यमान नगरी तुल्य्म् <br />
-        निजान्तर्गतम्
+        राम ब्रह्म परमारथ रूपा। अबिगत अलख अनादि अनूपा॥
+        सकल बिकार रहित गतभेदा। कहि नित नेति निरूपहिं बेदा॥
       </h1>
     </div>
     <canvas id="canvas1"></canvas>
