--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <body>
     <div id="texts">
       <h1 id="shloka">
-        राम ब्रह्म परमारथ रूपा। अबिगत अलख अनादि अनूपा॥
-        सकल बिकार रहित गतभेदा। कहि नित नेति निरूपहिं बेदा॥
+        राम ब्रह्म परमारथ रूपा।
+        अबिगत अलख अनादि अनूपा॥
+        
+        सकल बिकार रहित गतभेदा।
+        कहि नित नेति निरूपहिं बेदा॥
       </h1>
     </div>
     <canvas id="canvas1"></canvas>
