--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <body>
     <div id="texts">
       <h1 id="shloka">
-        राम ब्रह्म परमारथ रूपा।
-        अबिगत अलख अनादि अनूपा॥
+        राम ब्रह्म परमारथ रूपा। </br>
+        अबिगत अलख अनादि अनूपा॥ </br></br>
         
-        सकल बिकार रहित गतभेदा।
+        सकल बिकार रहित गतभेदा। </br>
         कहि नित नेति निरूपहिं बेदा॥
       </h1>
     </div>
